--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Welcome to Matthew's Portfolio.
             </h1>
             <h2>
-                <img src='CSS 2/yup.png'>
+                <img src='CSS 2/jackfrost.jpg'>
             </h2>
         </div>
         
