--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Matt's Website</title>
     <link rel="stylesheet" href="./CSS 2/styles.css">
 </head>
 <body>
@@ -15,9 +15,9 @@
     <nav id="mainNav">
         <div class="container">
             <ul>
-                <li><a href="#">HOME</a> </li>
-                <li><a href="#">GAME</a> </li>
-                <li><a href="#">INFO</a> </li>
+                <li><a href="index.html">HOME</a> </li>
+                <li><a href="game.html">GAME</a> </li>
+                <li><a href="otherpage.html">INFO</a> </li>
             </ul>
         </div>
     </nav>
