--- a/game.html
+++ b/game.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="./CSS 2/styles.css">
 </head>
 <body>
+    <header id="mainHeader">
+        <div class="container">
+            <h1>Game
+            </h1>
+        </div>
+    </header>
     <nav id="mainNav">
         <div class="container">
             <ul>
                 <li><a href="index.html">HOME</a> </li>
-                <li><a href="game.html">GAME</a> </li>
+                <li><a href="game.html">JAVA</a> </li>
                 <li><a href="otherpage.html">INFO</a> </li>
             </ul>
         </div>
