--- a/otherpage.html
+++ b/otherpage.html
@@ -7,14 +7,21 @@
     <link rel="stylesheet" href="./CSS 2/styles.css">
 </head>
 <body>
+    <header id="mainHeader">
+        <div class="container">
+            <h1>INFO
+            </h1>
+        </div>
+    </header>
     <nav id="mainNav">
         <div class="container">
             <ul>
                 <li><a href="index.html">HOME</a> </li>
-                <li><a href="game.html">GAME</a> </li>
+                <li><a href="game.html">JAVA</a> </li>
                 <li><a href="otherpage.html">INFO</a> </li>
             </ul>
         </div>
     </nav>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ex aperiam delectus quae et, id error ut doloremque. Amet veritatis consequatur excepturi, eius mollitia quia voluptates harum quae odio tempore?
 </body>
 </html>
