--- a/game.html
+++ b/game.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matt's Website</title>
-    <link rel="stylesheet" href="./CSS 2/styles.css">
+    <title>Matt's Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="mainHeader">
-        <div class="container">
-            <h1>Game
-            </h1>
-        </div>
-    </header>
     <nav id="mainNav">
         <div class="container">
             <ul>
@@ -22,5 +15,10 @@
             </ul>
         </div>
     </nav>
+<div id="game">
+    <div id="character">
+    </div>
+</div>
 </body>
+<script src="main.js"></script>
 </html>
