--- a/otherpage.html
+++ b/otherpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matt's Website</title>
-    <link rel="stylesheet" href="./CSS 2/styles.css">
+    <link rel="stylesheet" href="./CSS 2/style.css">
 </head>
 <body>
     <header id="mainHeader">
