--- a/game.html
+++ b/game.html
@@ -15,6 +15,12 @@
             </ul>
         </div>
     </nav>
+    <div class="instructions">
+        <p><b></b>Intstructions:</b></p>
+        <p>Use arrow keys to move left and right.</p>
+        <p>Fall through the holes</p>
+        <p>Platforms get progressively faster as the game continues</p>
+    </div>
 <div id="game">
     <div id="character">
     </div>
