--- a/otherpage.html
+++ b/otherpage.html
@@ -22,6 +22,11 @@
             </ul>
         </div>
     </nav>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ex aperiam delectus quae et, id error ut doloremque. Amet veritatis consequatur excepturi, eius mollitia quia voluptates harum quae odio tempore?
+    <div class="contact">
+        <p>Email: mmalnak21@pascack.org</p>
+        <p>Instagram: matt_ermmm</p>
+        <p>Twitter: @mattyspin </p>
+        <p>My cat: <br> <img src="cat.png" height="300" width="400"> </p>
+    </div>
 </body>
 </html>
