--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>
                     <b>I'm Matt</b>
                 </p>
-                <p2>Computer specialist <br> and more.</p2>
+                <p2>Computer specialist <br> and more...</p2>
             </h2>
             
             <h3>
