--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
         <div class="text">
             <p>About Me</p>
             <p>Computer Hardware and Software specialist</p>
-            <p>Hi, My Name is Matthew M. I am an aspiring Information technology major. I am able to fix any and all computer problems that you may be having. </p>
+            <p>Hi, My Name is Matthew M. I am currently completing my 3rd year of computer science.</p>
             <p>I am currently attending <a href="https://hills.pascack.org/"> Pascack Hills Highschool </a> studying: Java, HTML, CSS, and Javascript.</p>
+            <p>I am also a co-captain of history bowl and I am proficient with computers.</p>
         </div>
         <a href="Resume.docx" download="">
         <button class="resume">Resume</button>
@@ -56,8 +57,6 @@
             Try My Java Game: <br>
             <a href="Pong Game RE-fixed (1).jar"download> <img src='CSS 2/java.png' class="hover" width="250" height="250"> </a>
         </div>
-    
-    <!-- <button name="button" onclick="alert('you totally just pressed a button thats crazy...')">click me</button> -->
     <div id="clearFix"></div>
     
     <div id="fixed">
